fix setview offset, set bg color, set resume overflow

--- a/style.css
+++ b/style.css
@@ -19,9 +19,10 @@ body{
   text-align: left;
   min-height: 100%;
   width: 100%;
-  background-color: #ffffff;
+  background-color: hsl(214, 100%, 97%);
   border-bottom: 1px solid rgb(196, 196, 196);
   border-right: 0px;
+  overflow: scroll;
 }
 
 .map {
